--- a/layouts/partials/twittercard.html
+++ b/layouts/partials/twittercard.html
@@ -1,5 +1,5 @@
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@yourTwitterHandle">
+<meta name="twitter:site" content="@sobradob">
 <meta name="twitter:title" content="{{ .Title }}">
 <meta name="twitter:description" content="{{ with .Description }}{{ . }}{{ else }}{{ .Summary }}{{ end }}">
 
